--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
+  <link
+    href="https://jsprimer.net/use-case/todoapp/final/final/index.css"
+    rel="stylesheet"
+  />
 </head>
 <body>
-  <h1>Todo App</h1>
-  <script type="module" src="index.js"></script>
-</body>
+  <div class="todoapp">
+    <form id="js-form">
+      <input
+        id="js-form-input"
+        class="new-todo"
+        type="text"
+        placeholder="What need to be done?"
+        autocomplete="off"
+        />
+    </form>
+    <div id="js-todo-list" class="todo-list">
+
+    </div>
+    <footer class="footer">
+      <span id="js-todo-count">Todoアイテム数: 0</span>
+    </footer>
+  </div>
+  <script src="./index.js" type="module"></script>
+  </body>
 </html>
